Aula de Responsividade 03/03/2023

--- a/SemanticaCSS/login.html
+++ b/SemanticaCSS/login.html
@@ -14,7 +14,7 @@
         <nav id="menu">
             <img src="img/Notion_app_logo.png" alt="logo">
             <br>
-            <a href="" class="LinkMenu">Sobre nós </a> |
+            <a href="index.html" class="LinkMenu">Sobre nós </a> |
             <a href="" class="LinkMenu">Roupas </a> |
             <a href="" class="LinkMenu">Móveis </a> |
             <a href="" class="LinkMenu">Eletrônicos </a> |
