--- a/ResponsividadeMQCSS/index.html
+++ b/ResponsividadeMQCSS/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,20 +8,25 @@
     <title>Responsividade</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="banner">
-        <img src="img/francis_face_by_mrthorleifsen_d27xn5c-fullview.jpg" alt="">
+        <img src="img/download.jfif" alt="" border="1px">
         <section class="texto">
             <h1>Nossa Empresa</h1>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus sed illum quaerat molestiae. Mollitia ab laborum quas iure, 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus sed illum quaerat molestiae. Mollitia
+                ab laborum quas iure,
                 quasi omnis molestias recusandae magnam sapiente ducimus quam, excepturi quos laudantium quo!
-                </p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, non id illo magni repellendus maxime, 
-                ducimus quis vel placeat excepturi cumque iste aliquid nesciunt optio necessitatibus ipsam sequi esse enim!
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, non id illo magni repellendus maxime,
+                ducimus quis vel placeat excepturi cumque iste aliquid nesciunt optio necessitatibus ipsam sequi esse
+                enim!
             </p>
             <a class="btn-banner" href="a" target="_blank">Saiba mais</a>
         </section>
     </div>
 </body>
+
 </html>
