Adicionando novos arquivos

--- a/AtividadeRevisaoLMR/index.html
+++ b/AtividadeRevisaoLMR/index.html
@@ -17,19 +17,30 @@
             <a href="" class="linkMenu">About us</a>
             <a href="" class="linkMenu">Contact</a>
         </div>
-        <img src="" alt="menuHamburguer" class="menuHanb">
+        <img src="img/hamburger_button_menu_icon_155296.png" alt="menuHamburguer" class="menuHanb">
     </div>
 
     <section class="p1">
-        <img src="" alt="Img1">
+        <div class="imagem">
+            <img src="img/computador.jpg" alt="Img1">
+        </div>
         <div class="info">
             <h1>
-                MINHA EMPRESA
+                <u>MINHA EMPRESA</u>
             </h1>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quidem consectetur repellat dolores
                 dolore, nesciunt veniam minus maxime corporis natus fugiat unde.
                 <br> illum quia qui soluta vitae harum quam?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam iusto recusandae iure, repellendus
+                impedit pariatur soluta, doloribus maxime suscipit, <br>
+                distinctio amet non odio perferendis eveniet dicta quibusdam esse quae nobis.
+            </p>
+
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+                Pariatur facere distinctio accusantium, quae facilis nihil voluptates saepe illo atque repudiandae eos
+                <br>harum consequuntur quisquam officia accusamus doloribus error nesciunt minima.
             </p>
         </div>
     </section>
