Melhorando a atividade de revisão em HTML

--- a/AtividadeRevisaoLMR/index.html
+++ b/AtividadeRevisaoLMR/index.html
@@ -11,11 +11,11 @@
 
 <body>
     <div class="nav">
-        <img src="" alt="logo" class="logo">
+        <img src="img/1024px-Android_O_Preview_Logo.png" alt="logo" class="logo">
         <div class="menu">
-            <a href="" class="linkMenu">Home</a>
-            <a href="" class="linkMenu">About us</a>
-            <a href="" class="linkMenu">Contact</a>
+            |<a href="" class="linkMenu">Home</a>|
+            <a href="" class="linkMenu">About us</a>|
+            <a href="" class="linkMenu">Contact</a>|
         </div>
         <img src="img/hamburger_button_menu_icon_155296.png" alt="menuHamburguer" class="menuHanb">
     </div>
@@ -35,12 +35,6 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam iusto recusandae iure, repellendus
                 impedit pariatur soluta, doloribus maxime suscipit, <br>
                 distinctio amet non odio perferendis eveniet dicta quibusdam esse quae nobis.
-            </p>
-
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
-                Pariatur facere distinctio accusantium, quae facilis nihil voluptates saepe illo atque repudiandae eos
-                <br>harum consequuntur quisquam officia accusamus doloribus error nesciunt minima.
             </p>
         </div>
     </section>
