"Mudando o fundo e adicionando efeitos para os links"

--- a/AvaliacaoGrupoHTML/index.html
+++ b/AvaliacaoGrupoHTML/index.html
@@ -11,22 +11,25 @@
 </head>
 
 <body>
-    <header class="menu">
-        <div class="menuLink">
-            <img src="img/coffee.png" alt="Coffe Logo">
-            <a href="index.html" class="LinkMenu">Home</a> |
-            <a href="" class="LinkMenu">Rewards</a> |
-            <a href="" class="LinkMenu">Nosso Café</a> |
-            <a href="" class="LinkMenu">Impacto Social</a>
-        </div>
-        <div class="cadastro">
-            <button class="button1">Login</button>
-            |
-            <button class="button2">Cadastrar</button>
-        </div>
-    </header>
+    <div class="fundo">
+        <header class="menu">
+            <div class="menuLink">
+                <img src="img/coffee.png" alt="Coffe Logo">
+                <a href="index.html" class="LinkMenu">Home</a> |
+                <a href="" class="LinkMenu">Rewards</a> |
+                <a href="" class="LinkMenu">Nosso Café</a> |
+                <a href="" class="LinkMenu">Impacto Social</a>
+            </div>
+            <div class="cadastro">
+                <button class="button1">Login</button>
+                |
+                <button class="button2">Cadastrar</button>
+            </div>
+        </header>
+    </div>
     <main>
-        
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </main>
 </body>
 
